samples/_failures_safe/1761465570_010cb3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75484df9.c:130:6: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  130 | enum Operation get
      |      ^~~~~~~~~
